...
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_weight="4"
                    android:id="@+id/buttonChange"
                    android:layout_width="101dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:text="+-" />

                <Button
                    android:layout_weight="4"
                    android:id="@+id/buttonDel"
                    android:layout_width="102dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:text="CE" />

                <Button
                    android:layout_weight="4"
                    android:id="@+id/buttonClear"
                    android:layout_width="101dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:text="C" />

                <Button
                    android:layout_weight="4"
                    android:id="@+id/buttonSqr"
                    android:layout_width="102dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:text="√" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="101dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="7" />

...
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="9" />

                <Button
                    android:id="@+id/buttonDiv"
                    android:layout_width="102dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="/" />
            </TableRow>
...
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="4" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="102dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="5" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="101dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="6" />

                <Button
                    android:id="@+id/buttonMult"
                    android:layout_width="102dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="*" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="101dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="1" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="102dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="2" />

...
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="3" />

                <Button
                    android:id="@+id/buttonMinus"
                    android:layout_width="102dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="-" />

...

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button0"
                    android:layout_width="101dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="0" />

                <Button
                    android:id="@+id/buttonDot"
                    android:layout_width="102dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="." />

                <Button
                    android:id="@+id/buttonRez"
                    android:layout_width="101dp"
                    android:layout_height="50dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="=" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="101dp"
                    android:layout_height="51dp"
                    android:layout_margin="6dp"
                    android:layout_weight="4"
                    android:text="+" />
            </TableRow>
...
